--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,7 +10,7 @@
 
 html {
     @include vh("height", 100);
-    // height: 100vh;
+    height: 100vh;
     width: 100%;
 }
 
@@ -168,12 +168,12 @@ main {
     display: none;
 }
 
-// debounce resize
 // support all browsers (iphone footer scroll)
     // 2 nav-menu transform, several mobile calc, vmin
 // 20vm margin under all mobile aboutpopups, but with click
 // speed up GH Pages (mostly Projects) load
 // two about images, RA gif
+// lazy image loader?
 
 @import "pages/about";
 @import "pages/projects";
